--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "express-graphql": "^0.6.6",
     "graphql": "^0.10.3",
     "mongoose": "^4.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
