--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "express-graphql": "^0.6.6",
     "graphql": "^0.10.3",
-    "mongoose": "^4.11.0"
+    "graphql-server-express": "^1.0.0",
+    "graphql-subscriptions": "^0.4.4",
+    "mongoose": "^4.11.0",
+    "subscriptions-transport-ws": "^0.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
